# a62

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Barcode_Decoder_Project_Model_Training.ipynb
