[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "barscan_ai"
version = "0.0.1"
description = "D\u00e9tection et classification automatique de codes-barres 1D/2D sur images \u00e0 l\u2019aide de YOLO et MLOps"
authors = [
  { name = "Alain \u0026 Folly" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["barscan_ai"]
include = ["pyproject.toml", "barscan_ai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["barscan_ai"]
force-sort-within-sections = true

